# Georgia-Frog-Identification

./: .env  .gitignore  Copy_of_Random_Forest.ipynb  FOLDER_SETUP.md  Final_Random_Forest.ipynb  INTEGRATION_GUIDE.md  POSTER_SUMMARY.md  README.md  audio_data_analysis_sample.ipynb  copy_of_svm_train_improved_py.py  data augmentation  data_preparation_report.md  desktop.ini  metadata_all.csv  metadata_test.csv  metadata_train.csv  metadata_val.csv  modeling_updates.ipynb  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  supabase_data_collection_test.ipynb
archive_modeling/: MODELERS_README.md  compute_permutation_importance.py  extract_features_and_baseline.py  package_for_modelers.py
data/: README.md  features_aggregated.csv
docs/: SETUP_SUPABASE.md
frontend/: OVERVIEW.md  index.html  package-lock.json
notebooks/: README.md  data_preparation_report.md  data_preperation.ipynb  metadata_processed_20251101_050842.csv  quick_inspect.ipynb  spectrogram_analysis.ipynb
reports/: README.md
results/: features_with_clusters.csv  spectrogram_features.csv  spectrogram_file_stats.csv  spectrogram_summary.csv  versions_1762228623.json
scripts/: CONFUSION_MATRIX_GUIDE.md  EXPORT_CM_FROM_NOTEBOOK.md  README.md  SOLUTION_SUMMARY.md  generate_confusion_matrix.py  generate_confusion_matrix_from_arrays.py  generate_confusion_matrix_simple.py  setup_folders.bat  setup_folders.ps1  setup_folders.sh  svm_train.py
server/: package-lock.json
src/: App.jsx  main.jsx
tools/: check_splits.py  export_and_combine_plots.py  merge_metadata.py  (+4 more)
(+40 files in other folders)
