[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-frog-id-data-prep"
version = "0.1.0"
description = "Data preparation pipeline for frog audio identification (normalization, robust decoding, and ML-specific trimming)."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "librosa>=0.10",
    "soundfile>=0.12",
    "requests>=2.28",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "supabase>=1.0",
    "matplotlib>=3.6",
    "ipython>=8.0",
]

[project.optional-dependencies]
vad = ["webrtcvad>=2.0"]
dev = ["pytest", "black", "flake8"]
