[metadata]
name = ga-frog-id-data-prep
version = 0.1.0
author = DataDarling
description = Data preparation pipeline for frog audio identification
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
install_requires =
    numpy>=1.24
    pandas>=1.5
    librosa>=0.10
    soundfile>=0.12
    requests>=2.28
    tqdm>=4.65
    python-dotenv>=1.0
    supabase>=1.0
    matplotlib>=3.6
    ipython>=8.0

[options.extras_require]
vad =
    webrtcvad>=2.0
dev =
    pytest
    black
    flake8
